tests/toylang/neg/000909_mutation.toylang
program a = { if bool a then sleep; } .
